# course-management-system

./: .gitignore  README.md  conftest.py  endpoints  httpie-tests  manage.py  mixins.py  pyproject.toml  pytest.ini
courses/: mixins.py  models.py  permissions.py  querysets.py  roles.py  serializers.py  urls.py  views.py
courses/models/: __init__.py  base.py  course.py  grade.py  homework.py  lecture.py  roles.py  user.py
courses/permissions/: __init__.py  base.py  courses.py  grades.py  submissions.py
courses/serializers/: __init__.py  course_serializers.py  grade_serializers.py  homework_serializers.py  lecture_serializers.py  user_serializers.py
courses/services/: access.py  course_services.py  filters.py  grade_services.py  homework_services.py  lecture_services.py  user_services.py
courses/tests/: factories.py  test_auth.py  test_courses.py  test_grade_comments.py  test_grades.py  test_homeworks.py  test_lectures.py  test_submissions.py
courses/views/: __init__.py  course_views.py  grade_views.py  homework_views.py  lecture_views.py  user_views.py
dummy_presentations/: presentation.html
leverx_courses/: asgi.py  settings.py  urls.py  wsgi.py
